--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://Prathamesh-Kumar.github.io/portfolio-react",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
